# firehose_analysis_tool

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  artifacts.py  config.py  db.py  extractor_rules.json  extractors.py  llm_client.py  main.py  pipeline.py  reporting.py  service.py
app/static/: style.css
app/templates/: base.html  index.html  run_detail.html
data/: smoke_sample.txt
docs/: design.md  project_plan.md
prompts/: base_prompt.md
sql/: schema.sql
tests/: test_extractors.py  test_pipeline_duckdb.py
