[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firehose-analysis-tool"
version = "0.1.0"
description = "Metrics-first firehose telemetry analysis tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "jinja2>=3.1.6",
  "python-multipart>=0.0.20",
  "duckdb>=1.3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "extractor_rules.json"]
